# publicapi/oas_router_gen.go
@@ -40,7 +40,6 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		s.notFound(w, r)
 		return
 	}
-	args := [1]string{}
 
 	// Static code generated router with unwrapped path search.
 	switch {
@@ -49,53 +48,26 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 			break
 		}
 		switch elem[0] {
-		case '/': // Prefix: "/"
+		case '/': // Prefix: "/accounts"
 
-			if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
+			if l := len("/accounts"); len(elem) >= l && elem[0:l] == "/accounts" {
 				elem = elem[l:]
 			} else {
 				break
 			}
 
-			// Param: "customerId"
-			// Match until "/"
-			idx := strings.IndexByte(elem, '/')
-			if idx < 0 {
-				idx = len(elem)
-			}
-			args[0] = elem[:idx]
-			elem = elem[idx:]
-
 			if len(elem) == 0 {
-				break
-			}
-			switch elem[0] {
-			case '/': // Prefix: "/accounts"
-
-				if l := len("/accounts"); len(elem) >= l && elem[0:l] == "/accounts" {
-					elem = elem[l:]
-				} else {
-					break
+				// Leaf node.
+				switch r.Method {
+				case "GET":
+					s.handleListAccountsRequest([0]string{}, elemIsEscaped, w, r)
+				case "POST":
+					s.handleCreateAccountRequest([0]string{}, elemIsEscaped, w, r)
+				default:
+					s.notAllowed(w, r, "GET,POST")
 				}
 
-				if len(elem) == 0 {
-					// Leaf node.
-					switch r.Method {
-					case "GET":
-						s.handleListAccountsRequest([1]string{
-							args[0],
-						}, elemIsEscaped, w, r)
-					case "POST":
-						s.handlePostAccountRequest([1]string{
-							args[0],
-						}, elemIsEscaped, w, r)
-					default:
-						s.notAllowed(w, r, "GET,POST")
-					}
-
-					return
-				}
-
+				return
 			}
 
 		}
@@ -111,7 +83,7 @@ type Route struct {
 	operationGroup string
 	pathPattern    string
 	count          int
-	args           [1]string
+	args           [0]string
 }
 
 // Name returns ogen operation name.
@@ -184,61 +156,38 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 			break
 		}
 		switch elem[0] {
-		case '/': // Prefix: "/"
+		case '/': // Prefix: "/accounts"
 
-			if l := len("/"); len(elem) >= l && elem[0:l] == "/" {
+			if l := len("/accounts"); len(elem) >= l && elem[0:l] == "/accounts" {
 				elem = elem[l:]
 			} else {
 				break
 			}
 
-			// Param: "customerId"
-			// Match until "/"
-			idx := strings.IndexByte(elem, '/')
-			if idx < 0 {
-				idx = len(elem)
-			}
-			args[0] = elem[:idx]
-			elem = elem[idx:]
-
 			if len(elem) == 0 {
-				break
-			}
-			switch elem[0] {
-			case '/': // Prefix: "/accounts"
-
-				if l := len("/accounts"); len(elem) >= l && elem[0:l] == "/accounts" {
-					elem = elem[l:]
-				} else {
-					break
+				// Leaf node.
+				switch method {
+				case "GET":
+					r.name = ListAccountsOperation
+					r.summary = "Retrieves a list of accounts based on search parameters"
+					r.operationID = "listAccounts"
+					r.operationGroup = ""
+					r.pathPattern = "/accounts"
+					r.args = args
+					r.count = 0
+					return r, true
+				case "POST":
+					r.name = CreateAccountOperation
+					r.summary = "Creates a new account"
+					r.operationID = "createAccount"
+					r.operationGroup = ""
+					r.pathPattern = "/accounts"
+					r.args = args
+					r.count = 0
+					return r, true
+				default:
+					return
 				}
-
-				if len(elem) == 0 {
-					// Leaf node.
-					switch method {
-					case "GET":
-						r.name = ListAccountsOperation
-						r.summary = "Retrieves a list of accounts based on search parameters"
-						r.operationID = "list-accounts"
-						r.operationGroup = ""
-						r.pathPattern = "/{customerId}/accounts"
-						r.args = args
-						r.count = 1
-						return r, true
-					case "POST":
-						r.name = PostAccountOperation
-						r.summary = "Creates a new account"
-						r.operationID = "postAccount"
-						r.operationGroup = ""
-						r.pathPattern = "/{customerId}/accounts"
-						r.args = args
-						r.count = 1
-						return r, true
-					default:
-						return
-					}
-				}
-
 			}
 
 		}
